--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,13 +102,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
     //Firebase Crashlytics
     implementation 'com.google.firebase:firebase-crashlytics:17.4.1'
     implementation 'com.google.firebase:firebase-analytics:18.0.3'
-
-    //Firestore
-    implementation 'com.google.firebase:firebase-firestore-ktx'
-    implementation 'com.firebaseui:firebase-ui-firestore:6.2.1'
-
 }
