--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,7 @@ dependencies {
     //Firebase Crashlytics
     implementation 'com.google.firebase:firebase-crashlytics:17.4.1'
     implementation 'com.google.firebase:firebase-analytics:18.0.3'
+
+    //Facebook SDK
+    implementation 'com.facebook.android:facebook-android-sdk:4.29.0'
 }
