--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,10 +28,34 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewsApp">
-        <activity android:name=".ui.activities.RegisterActivity"
-            android:theme="@style/Theme.NewsApp2">
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
         </activity>
-        <activity android:name=".ui.activities.LoginActivity"
+
+
+        <activity
+            android:name=".ui.activities.RegisterActivity"
+            android:theme="@style/Theme.NewsApp2" />
+        <activity
+            android:name=".ui.activities.LoginActivity"
             android:theme="@style/Theme.NewsApp2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,8 +70,7 @@
         <activity
             android:name=".ui.activities.MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".ui.activities.MainActivity">
-        </activity>
+        <activity android:name=".ui.activities.MainActivity"></activity>
 
         <provider
             android:name="androidx.core.content.FileProvider"
